added more things

--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
 
-<p class="title-style">Hello! My name is Rohan.</p>
-<p class="title-style">Welcome to my website!</p>
+<div class="title_style_id">
+    <h6 class="title-style">Hello! My name is Rohan.</h6>
+    <h5 class="title-style">Welcome to my website!</h5>
+</div>
+
+<div>
+    <p >I am a student at <a href="https://www.utexas.edu/" target="_blank">The University of Texas at Austin</a>  majoring in Computer Engineering!</p>
+    
+</div>
+
 
