--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
 
 <div>
     <p >I am a student at <a href="https://www.utexas.edu/" target="_blank">The University of Texas at Austin</a>  majoring in Computer Engineering!</p>
-    
 </div>
+
+<div class="outer_box">
+    <div class="middle_box">My attempt at a CSS Box Model</div>
+    <div class="inner_box">Middle Box</div>
+</div>
+
+
+
 
 
