--- a/index.html
+++ b/index.html
@@ -1,19 +1,29 @@
 
-<div class="title_style_id">
-    <h6 class="title-style">Hello! My name is Rohan.</h6>
-    <h5 class="title-style">Welcome to my website!</h5>
-</div>
 
-<div>
-    <p >I am a student at <a href="https://www.utexas.edu/" target="_blank">The University of Texas at Austin</a>  majoring in Computer Engineering!</p>
-</div>
-
-<div class="outer_box">
-    <div class="middle_box">My attempt at a CSS Box Model</div>
-    <div class="inner_box">Middle Box</div>
-</div>
-
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Web Page</title>
+    <link rel="stylesheet" href="stylesheet.css">
+</head>
+<body>
+    <div class="title_style_id">
+        <h6 class="title-style">Hello! My name is Rohan.</h6>
+        <h5 class="title-style">Welcome to my website!</h5>
+    </div>
+    
+    <div>
+        <p >I am a student at <a href="https://www.utexas.edu/" target="_blank">The University of Texas at Austin</a>  majoring in Computer Engineering!</p>
+    </div>
+    
+    <div class="outer_box">
+        <div class="middle_box">My attempt at a CSS Box Model</div>
+        <div class="inner_box">Middle Box</div>
+    </div>
+</body>
+</html>
 
 
 
