add more content

--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Correctly use a <meta> “description” tag to describe your site to search engines. -->
+    <meta name="description" content="This is my personal website displaying some of web development skills I have learned in class!">
     <title>My Web Page</title>
     <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
     <div class="title_style_id">
-        <h6 class="title-style">Hello! My name is Rohan.</h6>
-        <h5 class="title-style">Welcome to my website!</h5>
+        <h6 class="title-style_id">Hello! My name is Rohan.</h6>
+        <h5 >Welcome to my website!</h5>
     </div>
     
     <div>
@@ -22,6 +23,16 @@
         <div class="middle_box">My attempt at a CSS Box Model</div>
         <div class="inner_box">Middle Box</div>
     </div>
+
+    <img src="https://adamnfineartist.com/cdn/shop/products/bevo-15-xv-fine-art-print-on-paper-sports-788_large.jpg?v=1681246899RL" alt="UT Bevo">
+
+    <!-- Use at least two components (e.g., Button) from a library like Material UI. -->
+    <div>  
+        <input type="text" class="material-input" placeholder="Enter your name..." />
+        <button class="material-button">PRESS FOR FUN</button>
+    </div>
+    
+
 </body>
 </html>
 
